--- a/.code.yml
+++ b/.code.yml
@@ -10,7 +10,8 @@ source:
     # 自动生成代码文件的正则表达式，若无统一标识格式，可以指定具体目录，样例可参考test_source举例
     filepath_regex:
       - "./docs/.*"
-      - ".*/*_gen.go"
+      - ".*/.*_gen\.go"
+      - ".*/.*\.pb\.go"
   # 提供产品代码库中直接以源码形式存在的第三方代码目录或代码文件名的正则表达。
   # 此处备注的第三方代码将在代码检查时进行排除，若代码库中不存在需要排除的第三方代码，该项配置标识可为空
   third_party_source:
