feature: collector 支持 licensechecker 处理器 (#17)
* feature: 新增 licensechecker 处理器 (#5)

* merge:合并代码

* merge:合并修改

* minor:移除多余日志输出

* sprintfix:修改PR中提到的问题

* sprintfix:修改PR中提到的错误

* test:修改单测

---------

Co-authored-by: Kimmy <kimmy@canway.net>
Co-authored-by: dongdong <chenjiandongx@qq.com>

* optimize: license checker 代码优化

* tests: 测试完善

* tests: 测试完善

* tests: 测试完善

* tests: 测试完善

* tests: 完善测试

* tests: 完善测试

* upgrade: 版本更新

* minor: 细节优化

* tests: 完善测试

* sprintfix:上移license是否启用的逻辑，未启用则默认放行

* minor: 细节优化

* minor: 细节优化

* sprintfix:修复license数量为0的时候出现的逻辑错误

---------

Co-authored-by: Kimmy <68001864+Liyu6371@users.noreply.github.com>
Co-authored-by: Kimmy <kimmy@canway.net>
Co-authored-by: mandochen <mandochen@tencent.com>

--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -63,15 +63,15 @@ bk-collector:
 
   # ============================= TraceStorage ===============================
   trace_storage:
-    type: "leveldb"
+    type: "builtin"
     dir: "."
 
   # =============================== SubConfig ================================
   apm:
     patterns:
       - "./example/fixtures/report_*.yml"
-      # - "./example/platform.yml"
-      # - "./example/subconfig.yml"
+      - "./example/platform.yml"
+      - "./example/subconfig.yml"
 
   # =============================== Logging ==================================
   logging:
@@ -392,6 +392,9 @@ bk-collector:
         decoded_iv: "bkbkbkbkbkbkbkbk"
         decoded_key: "81be7fc6-5476-4934-9417-6d4d593728db"
 
+    # LicenseChecker: 验证接入的节点数
+    - name: "license_checker/common"
+      config:
     # TokenChecker: 权限校验处理器
     # Proxy
     - name: "token_checker/proxy"
@@ -852,8 +855,9 @@ bk-collector:
       processors:
         - "token_checker/aes256"
         - "rate_limiter/token_bucket"
+        - "license_checker/common"
         #- "forwarder/traces"
-        - "sampler/status_code"
+        #- "sampler/status_code"
         - "resource_filter/assemble"
         - "attribute_filter/common"
         - "service_discover/common"
