feature: 增加归档服务 (#29)
* feature: 修复 cos 上传异常，文件过大会导致读取不全，改成分块读取

* feature: 修复 shard key 验证长度

* feature: 增加 cos_temp 的路径配置

* feature: 增加 cos_temp 的路径配置

* feature: 增加归档服务查询模块的 trace 打点和异常报错

* feature: unify-query 支持归档服务的查询模块

* feature: 修改 protobuf 包名称，防止冲突

* feature: 修改 protobuf 包名称，防止冲突

* feature: 通过过期时间判断是否读取归档模块

* feature: 通过过期时间判断是否读取归档模块

* feature: 通过过期时间判断是否读取归档模块

* feature: unify-query 修改 bk_task_index 的获取方式

* feature: lint fix

* feature: fix shard meta uniq string

* feature: shard 增加 expired 字段

* feature: shard 增加 expired 字段

* feature: 归档服务 action bugfix

* feature: shard 增加状态值判断

* feature: shard 增加状态值判断

* feature: shard 增加时间范围判断

* feature: shard 增加时间范围判断

* feature: shard 增加时间范围判断

* feature: 兼容归档服务的 grpc 查询

* feature: merge master

* feature: fix vmrt query

* feature: fix get tag router

* feature: fix lint

---------

Co-authored-by: shamcleren <shamcleren@tencent.com>

--- a/pkg/offline-data-archive/config.yaml
+++ b/pkg/offline-data-archive/config.yaml
@@ -1,8 +1,7 @@
 move:
   instance_name:
   cluster_name:
-  tag_name:
-  tag_value:
+  tag_router:
   source_dir:
   target_name: cos
   target_dir:
@@ -31,7 +30,9 @@ query:
     port: 8090
     read_timeout: 5s
     metric: /metric
-    dir: dist/cos_temp/demo
+
+common:
+  temp_dir: dist/cos_temp
 
 logger:
   level: info
