optimize: collector validator 优化 (#39)
* optimize: collector validator 优化

* bugfix: 修复 proxy tokenchecker 不生效问题

* upgrade: 版本更新

* bugfix: 修复 max_future_time_offset 字段失效问题

---------

Co-authored-by: mandochen <mandochen@tencent.com>

--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -395,9 +395,12 @@ bk-collector:
     # LicenseChecker: 验证接入的节点数
     - name: "license_checker/common"
       config:
+
     # TokenChecker: 权限校验处理器
     # Proxy
     - name: "token_checker/proxy"
+      config:
+        type: "proxy"
 
     # ProxyValidator: proxy 数据校验器
     - name: "proxy_validator/common"
