--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -224,6 +224,9 @@ bk-collector:
         as_string:
           keys:
             - "attributes.http.host"
+        as_int:
+          keys:
+            - "attributes.http.status_code"
         from_token:
           biz_id: "bk_biz_id"
           app_name: "bk_app_name"
