feature: collector attributer_filter 增加 cut/drop action (#61)
* sprintfix:增加配置文件内容

* sprintfix:修复skywalking转化为ot数据的时候将所有属性放入resource的问题

* feature:增加配置文件内容以支持attribute删除以及裁剪操作

* test:补充单测内容

* minor:补充doc文档

* optimize:调整代码评审的内容

* remove:注释Link维度插入parentService的功能

* optimize:移除无用代码，补全parentSpanId获取的逻辑

* optimize: 代码细节优化 (#64)

Co-authored-by: mandochen <mandochen@tencent.com>

* minor: 细节优化

* minor: 细节优化

* minor: 细节优化

* sprintfix:补全skywalking->ot缺失的规则转换逻辑

* optimize:调整skywalking转化ot的代码

* sprintfix:增加配置模版到应用以及平台级别

* sprintfix:修改skywalking转ot数据的兜底规则

* test:补充测试内容

* sprintfix:修改单测内容以及代码评审内容调整

* sprintfix:修改配置文件模版

* sprintfix:修改配置模版

* sprintfix:修改配置模版

* minor: 代码细节优化

* sprintfix:修复因冒号污染配置模版的问题

* minor: 代码细节优化

---------

Co-authored-by: Kimmy <kimmy@canway.net>
Co-authored-by: mandochen <mandochen@tencent.com>
Co-authored-by: dongdong <chenjiandongx@qq.com>

--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -286,6 +286,11 @@ bk-collector:
                   - "attributes.topic"
                 separator: ":"
 
+    # Attribute_filter 应用层级的配置
+    - name: "attribute_filter/app"
+      config:
+
+
     # MetricsFilter: 指标过滤处理器
     # Drop
     - name: "metrics_filter/drop"
@@ -892,6 +897,7 @@ bk-collector:
         #- "sampler/status_code"
         - "resource_filter/assemble"
         - "attribute_filter/common"
+        - "attribute_filter/app"
         - "service_discover/common"
         - "traces_deriver/duration"
         - "traces_deriver/delta"
