feature: collector 支持 skywalking 探针自定义参数下发功能 (#76)
* sprintfix:receiver增加功能支持skywalking探针自定义配置下发

* feature:新增probefilter支持对探针自定义配置上报的数据进行tag标记

* sprintfix:修改skywalking转ot逻辑以及PR评审中的问题

* sprintfix:修改配置文件

* sprintfix:修改配置文件

* test:补充单测内容

* test:补充doc

* test:补充单测内容

* sprintfix:修改receiver侧PR评审内容

* sprintfix:修改probefilter侧PR评审内容

* sprintfix:修改配置模版

* sprintfix:修改probefilter侧PR评审内容

* sprintfix:修改skywalking转ot的代码修复无法上报错误信息的情况

* sprintfix:修改PR代码评审中的问题

* sprintfix:修改配置文件

* optimize: 代码优化

* optimize: 代码优化

* minor: 细节调整

* sprintfix:修改配置文件缩进

* tests: 完善测试

* test:修改单测内容

* tests: 完善测试

* tests: 完善测试

* minor: 代码优化

---------

Co-authored-by: Kimmy <kimmy@canway.net>
Co-authored-by: mandochen <mandochen@tencent.com>

--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -290,6 +290,10 @@ bk-collector:
     - name: "attribute_filter/app"
       config:
 
+    # Probe_filter 探针采集过滤器
+    - name: "probe_filter/common"
+      config:
+
 
     # MetricsFilter: 指标过滤处理器
     # Drop
@@ -898,6 +902,7 @@ bk-collector:
         - "resource_filter/assemble"
         - "attribute_filter/common"
         - "attribute_filter/app"
+        - "probe_filter/common"
         - "service_discover/common"
         - "traces_deriver/duration"
         - "traces_deriver/delta"
