feature: collector 新增 dbfilter 处理器 (#65)
* feature: collector 新增 dbfilter 处理器

* docs: 文档更新

* minor: 细节优化

* minor: 细节优化

* minor: 细节优化

* minor: 代码细节优化

* tests: 完善测试

* tests: 完善测试

* tests: 完善测试

* sprintfix:修改配置文件

* sprintfix:调整peername产生的方式以及cache情况下db.system的产生方式

* sprintfix:修改配置文件

* test:修改单测

* sprintfix:修改应用层级配置模版

* sprintfix:修改skywalking转ot过程中db.system的处理方式

* minor: 细节优化

---------

Co-authored-by: mandochen <mandochen@tencent.com>
Co-authored-by: Kimmy <kimmy@canway.net>

--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -432,7 +432,9 @@ bk-collector:
 
     # LicenseChecker: 验证接入的节点数
     - name: "license_checker/common"
-      config:
+
+    # DbFilter: db 处理器
+    - name: "db_filter/common"
 
     # TokenChecker: 权限校验处理器
     # Proxy
@@ -901,6 +903,7 @@ bk-collector:
         #- "sampler/status_code"
         - "resource_filter/assemble"
         - "attribute_filter/common"
+        - "db_filter/common"
         - "attribute_filter/app"
         - "probe_filter/common"
         - "service_discover/common"
