optimize: collector 补全 skywalking 遗漏的字段属性 (#90)
* bugfix:修复PMC需求中遗漏的字段内容

* sprintfix:修改导包别名

* test:补充单测

* sprintfix:修改PR代码评审的内容

* sprintfix:调整jvm上报维度

* sprintfix:调整代码评审中的问题

* sprintfix:修改配置文件以及平台配置模版中api_name的字段

* sprintfix:更正代码评审中指出的错误处理的问题

* sprintfix:补全PMC功能开发中遗漏的attr属性,修改api_name的生成方式

* minor: 细节优化

---------

Co-authored-by: Kimmy <kimmy@canway.net>
Co-authored-by: mandochen <mandochen@tencent.com>

--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -233,6 +233,7 @@ bk-collector:
         assemble:
           - destination: "api_name"
             predicate_key: "attributes.http.scheme"  # HTTP
+            default_from: "span_name"
             rules:
               - kind: "SPAN_KIND_CLIENT"
                 keys:
@@ -240,22 +241,27 @@ bk-collector:
                   - "attributes.http.host"
                   - "attributes.http.target"
                 separator: ":"
+                placeholder: "Unknown"
               - kind: "SPAN_KIND_SERVER"
                 keys:
                   - "attributes.http.method"
                   - "attributes.http.route"
                 separator: ":"
+                placeholder: "Unknown"
 
           - destination: "api_name"
             predicate_key: "attributes.rpc.system"  # RPC
+            default_from: "span_name"
             rules:
               - kind: ""
                 keys:
                   - "attributes.rpc.method"
                 separator: ":"
+                placeholder: "Unknown"
 
           - destination: "api_name"
             predicate_key: "attributes.db.system"  # DataBase
+            default_from: "span_name"
             rules:
               - kind: ""
                 first_upper:
@@ -265,9 +271,11 @@ bk-collector:
                   - "attributes.db.operation"
                   - "attributes.db.name"
                 separator: ":"
+                placeholder: "Unknown"
 
           - destination: "api_name"
             predicate_key: "attributes.messaging.system"  # Messaging
+            default_from: "span_name"
             rules:
               - kind: "SPAN_KIND_PRODUCER"
                 first_upper:
@@ -277,6 +285,7 @@ bk-collector:
                   - "const.producer"
                   - "attributes.topic"
                 separator: ":"
+                placeholder: "Unknown"
               - kind: "SPAN_KIND_CONSUMER"
                 first_upper:
                   - "attributes.messaging.system"
@@ -285,6 +294,7 @@ bk-collector:
                   - "const.consumer"
                   - "attributes.topic"
                 separator: ":"
+                placeholder: "Unknown"
 
     # Attribute_filter 应用层级的配置
     - name: "attribute_filter/app"
