feat: support extra_json (#92)
* feat: support extra_json

* feat: 将JSON额外字段调整至ext中

* feat: 调整保留未定义字段的key名称

* feat: 配置获取和用户字段构建提取到上层

* feat: 增加多种条件下的单测

* fix: 修复配置获取方式, 配置在result_table_config里

* feat: 调整GetSeparatorFieldByOption入参以及单测

* feat: 实现TransformMapByJsonWithRetainExtraJSON

* feat: 还原log代码

--- a/pkg/transfer/Makefile
+++ b/pkg/transfer/Makefile
@@ -39,7 +39,7 @@ build: mod
 
 .PHONY: test
 test: mod
-	$(GO) test -timeout 70s -tags "$(BUILDTAGS)" -parallel 8  ./...
+	$(GO) test -timeout 70s -tags "$(BUILDTAGS) $(JSON_LIB)" -parallel 8  ./...
 
 .PHONY: lint
 lint: mod
