--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -163,6 +163,8 @@ bk-collector:
         enabled: false
       skywalking:
         enabled: true
+      pyroscope:
+        enabled: true
 
 
   # =============================== Processor ================================
@@ -1046,6 +1048,12 @@ bk-collector:
       type: "metrics.derived"
       processors:
 #        - "apdex_calculator/standard"
+
+    - name: "profiles_pipeline/common"
+      type: "profiles"
+      processors:
+        - "token_checker/aes256"
+        - "rate_limiter/token_bucket"
 
 
   # =============================== Exporter =================================
