--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,13 +3,14 @@
 default_stages: [ commit ]
 default_install_hook_types: [ pre-commit, commit-msg ]
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
-    hooks:
-      - id: check-merge-conflict
-      - id: detect-private-key
   - repo: local
     hooks:
+      - id: check-pre-ci
+        name: check pre ci
+        entry: scripts/pre_commit/preci.sh
+        language: system
+        verbose: true
+
       # 提交前，需要检查提交 message
       - id: check-commit-message
         name: Check commit message
@@ -51,3 +52,9 @@ repos:
         language: script
         verbose: true
         files: ".*\\.go"
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
+    hooks:
+      - id: check-merge-conflict
+      - id: detect-private-key
