--- a/.gtmproject.yaml
+++ b/.gtmproject.yaml
@@ -15,5 +15,5 @@ project:
   default_target_branch: "master"
   # 范围，根据项目的模块或者分工设定，可为空
   scopes: []
-  reviewers: ["shamcleren", "chenjiandongx", "dellkeji", "jeremylv"]
+  reviewers: ["shamcleren", "chenjiandongx", "dellkeji", "jeremylv1992"]
 
