--- a/.gtmproject.yaml
+++ b/.gtmproject.yaml
@@ -10,7 +10,7 @@ github:
 
 project:
   # 默认单据来源
-  default_source: "github"
+  default_source: "tapd"
   # 默认目标分支
   default_target_branch: "master"
   # 范围，根据项目的模块或者分工设定，可为空
