feat: fta不再向前兼容旧版token

--- a/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
+++ b/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
@@ -117,6 +117,8 @@ bk-collector:
         enabled: true
       zipkin:
         enabled: false
+      fta:
+        enabled: true
 
   processor:
     # ApdexCalculator: 健康度状态计算器
@@ -226,6 +228,12 @@ bk-collector:
       processors:
         - "token_checker/fixed"
         - "apdex_calculator/standard"
+
+    - name: "fta_pipeline/common"
+      type: "fta"
+      processors:
+        - "token_checker/aes256"
+        - "rate_limiter/token_bucket"
 
   # =============================== Exporter =================================
   exporter:
