--- a/.gtmproject.yaml
+++ b/.gtmproject.yaml
@@ -14,6 +14,16 @@ project:
   # 默认目标分支
   default_target_branch: "master"
   # 范围，根据项目的模块或者分工设定，可为空
-  scopes: []
+  scopes:
+    - unify-query
+    - influxdb-proxy
+    - transfer
+    - bkmonitorbeat
+    - collector
+    - bk-monitor-worker
+    - ingester
+    - libgse
+    - operator
+    - utils
   reviewers: []
 
