--- a/.gtmproject.yaml
+++ b/.gtmproject.yaml
@@ -14,16 +14,6 @@ project:
   # 默认目标分支
   default_target_branch: "master"
   # 范围，根据项目的模块或者分工设定，可为空
-  scopes:
-    - unify-query
-    - influxdb-proxy
-    - transfer
-    - bkmonitorbeat
-    - collector
-    - bk-monitor-worker
-    - ingester
-    - libgse
-    - operator
-    - utils
+  scopes: []
   reviewers: []
 
