feat: 增加 drop_sampler 模板 #1010158081116237226

--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -1071,6 +1071,7 @@ bk-collector:
       type: "fta"
       processors:
           - "token_checker/aes256"
+          - "sampler/drop"
           - "rate_limiter/token_bucket"
 
 
