feat: 增加 JFR 解析器 & 补充单元测试 #1010158081116265414

--- a/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
+++ b/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
@@ -171,6 +171,11 @@ bk-collector:
         metrics_dataid: 1001  # default: 0
         logs_dataid: 1002     # default: 0
 
+    # Pprof converter: pprof 协议转换器
+    - name: "pprof_converter/common"
+      config:
+        type: "spy_converter"
+
     # TracesDeriver: Traces 派生处理器
     - name: "traces_deriver/duration"
       config:
