--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -481,6 +481,11 @@ bk-collector:
       config:
         type: "proxy"
 
+    # Pprof converter: pprof 协议转换器
+    - name: "pprof_converter/common"
+      config:
+        type: "spy_converter"
+
     # ProxyValidator: proxy 数据校验器
     - name: "proxy_validator/common"
 
@@ -1016,6 +1021,7 @@ bk-collector:
         - "traces_deriver/max"
         - "traces_deriver/sum"
         - "traces_deriver/bucket"
+        - "pprof_converter/common"
 
     - name: "logs_pipeline/common"
       type: "logs"
@@ -1066,6 +1072,7 @@ bk-collector:
       processors:
         - "token_checker/aes256"
         - "rate_limiter/token_bucket"
+        - "pprof_converter/common"
 
     - name: "profiles_pipeline/common"
       type: "fta"
