feat: 采集器支持 corefile pattern 定制化配置

--- a/pkg/bkmonitorbeat/support-files/templates/freebsd/x86_64/project.yaml
+++ b/pkg/bkmonitorbeat/support-files/templates/freebsd/x86_64/project.yaml
@@ -31,6 +31,9 @@ config_templates:
               items:
                 title: interface
                 type: string
+            corefile_pattern_path:
+              title: corefile_pattern_path
+              type: string
   - plugin_version: "*"
     name: bkmonitorbeat_prometheus.conf
     version: 1
