--- a/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
+++ b/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
@@ -234,6 +234,13 @@ bk-collector:
         - "token_checker/fixed"
         - "apdex_calculator/standard"
 
+    - name: "profiles_pipeline/common"
+      type: "profiles"
+      processors:
+        - "token_checker/aes256"
+        - "rate_limiter/token_bucket"
+        - "pprof_converter/common"
+
     - name: "fta_pipeline/common"
       type: "fta"
       processors:
