feat: update swagger api #1010158081116308311

--- a/pkg/unify-query/Makefile
+++ b/pkg/unify-query/Makefile
@@ -33,7 +33,7 @@ test:
 
 .PHONY: swag
 swag:
-	swag init --parseDependency --parseInternal
+	swag init --parseDependency true --parseInternal true
 
 .PHONY: fmt
 fmt:
