--- a/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
+++ b/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
@@ -171,6 +171,11 @@ bk-collector:
         metrics_dataid: 1001  # default: 0
         logs_dataid: 1002     # default: 0
 
+    # Pprof converter: pprof 协议转换器
+    - name: "pprof_converter/common"
+      config:
+        type: "spy_converter"
+
     # TracesDeriver: Traces 派生处理器
     - name: "traces_deriver/duration"
       config:
@@ -228,6 +233,13 @@ bk-collector:
       processors:
         - "token_checker/fixed"
         - "apdex_calculator/standard"
+
+    - name: "profiles_pipeline/common"
+      type: "profiles"
+      processors:
+        - "token_checker/aes256"
+        - "rate_limiter/token_bucket"
+        - "pprof_converter/common"
 
     - name: "fta_pipeline/common"
       type: "fta"
