--- a/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
+++ b/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
@@ -172,9 +172,9 @@ bk-collector:
         logs_dataid: 1002     # default: 0
 
     # Pprof converter: pprof 协议转换器
-    - name: "pprof_converter/common"
+    - name: "pprof_translator/common"
       config:
-        type: "spy_converter"
+        type: "spy"
 
     # TracesDeriver: Traces 派生处理器
     - name: "traces_deriver/duration"
@@ -239,7 +239,7 @@ bk-collector:
       processors:
         - "token_checker/aes256"
         - "rate_limiter/token_bucket"
-        - "pprof_converter/common"
+        - "pprof_translator/common"
 
     - name: "fta_pipeline/common"
       type: "fta"
