feat: tracederiver accumulator support series grownth rate

--- a/pkg/collector/example/fixtures/main.yml
+++ b/pkg/collector/example/fixtures/main.yml
@@ -59,6 +59,7 @@ bk-collector:
     patterns:
       - "../example/fixtures/platform.yml"
       - "../example/fixtures/subconfig.yml"
+      - "../example/fixtures/privileged.yml"
 
   # =============================== Logging ==================================
   logging:
