--- a/pkg/bk-monitor-worker/script/diff/diff.yaml
+++ b/pkg/bk-monitor-worker/script/diff/diff.yaml
@@ -1,8 +1,8 @@
 diffRedis:
-  originKey: ""
+  srcKey: ""
   bypassKey: ""
   keyType: "hash"
-  originRedis:
+  srcRedis:
     mode: standalone
     db: 5
     dialTimeout: 10s
