feature: support platform_override configuration

--- a/pkg/collector/example/fixtures/main.yml
+++ b/pkg/collector/example/fixtures/main.yml
@@ -57,7 +57,7 @@ bk-collector:
   # =============================== SubConfig ================================
   apm:
     patterns:
-      - "../example/fixtures/platform.yml"
+      - "../example/fixtures/platform*.yml"
       - "../example/fixtures/subconfig.yml"
 
   # =============================== Logging ==================================
